--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -5,6 +5,7 @@ GameDefaultMap=/Game/Maps/GameplayAbility.GameplayAbility
 
 
 EditorStartupMap=/Game/Maps/GameplayAbility.GameplayAbility
+GameInstanceClass=/Game/Blueprints/BPGameInstance.BPGameInstance_C
 
 [/Script/HardwareTargeting.HardwareTargetingSettings]
 TargetedHardwareClass=Desktop
