--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -99,6 +99,7 @@ bSkipMovies=False
 +IniSectionDenylist=StorageServers
 +MapsToCook=(FilePath="/Game/Maps/GameplayAbility")
 +MapsToCook=(FilePath="/Game/Maps/MainMenu_P")
++MapsToCook=(FilePath="/Game/Maps/Test")
 +DirectoriesToAlwaysCook=(Path="/Interchange/Functions")
 +DirectoriesToAlwaysCook=(Path="/Interchange/gltf")
 +DirectoriesToAlwaysCook=(Path="/Interchange/Materials")
